# stregsystemet

./: .coveragerc  .dockerignore  .git-blame-black-application  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  Dockerfile  Dockerfile.migrate  LICENSE  README.md  achievements.md  build_container.sh  changelog  codecov.yml  db.sqlite3.bak  debugger.md  default.nix  deploy_requirements.txt  django-debug-toolbar.nix  django-select2.nix  fabfile.py  flake.nix  freakyfunkyfonts.toml  local.cfg.skel  manage.py  migrate-fixture.sh  migrate-fixtures.sh  mkchange  pyproject.toml  reload-django-test.sh  requirements-prod.txt  requirements.dev.txt  requirements.txt  setup.py  setup_utils.py  shell.nix  themes.md  tox.ini
.github/: pr-preview.yml
.run/: migrate.run.xml  persistant_testdata.run.xml  stregsystemet.run.xml
autofocus/: apps.py
docker/: docker-compose.yml  restore-database-testenv.sh
docs/: purchase_confirmation.md
fkult/: admin.py  apps.py  forms.py  import_json.py  models.py  tests.py  urls.py  views.py
hitmarker/: apps.py
kiosk/: admin.py  apps.py  models.py  tests.py  urls.py  validators.py  views.py
media/kiosk/: .gitignore
nix-support/: README.md  default.nix  dependencies.nix  django-select2.nix  module.nix  shell.nix
openapi/: dredd.yml  dredd_hook.py  gen.sh  openapi.yaml  requirements.txt  stregsystem.yaml  utils.py
razzia/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
registration/: apps.py  forms.py  urls.py  views.py
sso/: README.md  admin.py  apps.py  auth_backends.py  models.py  tests.py  urls.py
stregreport/: admin_actions.py  apps.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
stregsystem/: __init__.py  achievements.py  admin.py  apps.py  booze.py  caffeine.py  deprecated.py  forms.py  mail.py  middleware.py  models.py  parser.py  purchase_heatmap.py  signals.py  tests.py  themes.json  urls.py  utils.py  views.py  vipps-tokens.example.json  vipps_api.py  widgets.py
treo/: settings.py  urls.py  wsgi.py
(+422 files in other folders)
