[project]
name = "stregsystemet"
version = "2.6.5"
description = "The Stregsystem is used at F-Klubben to pay for goods bought at Strandvejen and for signup to various events held by F-klubben."
authors = [
  { name = "FIT" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
readme = "README.md"

[tool.migratefixture.next]
kiosk = "0011_rename_uploaded_date_kioskitem_created_at"
razzia = "0003_razzia_created_at_razzia_updated_at"
stregreport = "0009_rename_razziaentry_razziaentryold"
stregsystem = "0024_alter_productnote_products"
