[project]
name = "stregsystemet"
version = "2.6.5"
description = "The Stregsystem is used at F-Klubben to pay for goods bought at Strandvejen and for signup to various events held by F-klubben."
authors = [
  { name = "FIT" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["stregsystem", "treo", "media", "kiosk", "razzia", "openapi", "stregreport"]
